Revert "Changing typo - Vita to Vitae"
This reverts commit 2dca5a2a3bd9c535efe6443b16ab1fce0c750d76.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ footer {
 
 <b>Home</b> &emsp;
 
-<a href="/William%20X.%20Q.%20Ngiam%20Curriculum%20Vitae.pdf"> CV</a>
+<a href="/William%20X.%20Q.%20Ngiam%20Curriculum%20Vita.pdf"> CV</a>
 
 &emsp; <a href="/research.html">Research</a> &emsp;
 
@@ -79,7 +79,6 @@ You can find PDFs or any available open data of my publications and posters in t
 I also love to run, capture landscapes with my camera drone, and cheat on my vegetarianism.
 </p>
 </body>
-
 <!--This controls the footer of the homepage.-->
 <footer>
 <table id="footer" style="width:100%">
