--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ footer {
 
 <b>Home</b> &emsp;
 
-<a href="/William%20X.%20Q.%20Ngiam%20Curriculum%20Vita.pdf"> CV</a>
+<a href="/William%20X.%20Q.%20Ngiam%20Curriculum%20Vitae.pdf"> CV</a>
 
 &emsp; <a href="/research.html">Research</a> &emsp;
 
